-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.857 2011-02-23 21:07:21 guru Exp $
-----------------------------------------------------------------------------------------

2011-02-22	pwessel
	* gmt_init.c:		The symbol_parsing for psxy[z] did not properly set the
				column types when no symbol size was given.  This affected
				symbols that require angles (-Sw, -SE, -SJ) when unit was SI.

2011-02-17	pwessel
	* gmt_init.c:		The -: option messed up the column type arrays; should
				only swap x|y data columns, not type columns.

2011-02-16	jluis
	* grdproject.c:		Not providing -R was not working anymore.
				Test if hemisphere sign is provided when doing -Ju and no -R

2011-02-10	pwessel
	* pslib.c:		Add check for incomplete escape sequences.

2011-02-09	pwessel
	* grdclip.c:		Now complains if no -S option was given.

2011-02-08	pwessel
	* grdtrack.c:		Message about -L being obsolete should only come when no
				modifier is given; else it is valid for BC setting.

2011-01-25	pwessel
	* pscontour.c:		Did not find some contours following triangle edges.

2011-01-17	pwessel
	* x2sys/x2sys_init.c:	Did not write both of -Nd -Ns to the tag file.

2011-01-11	remko
	* ps2raster.c:		Bug fix after last -F option update
	* gmt_map.c:		Fixed bug in Haversine equation for duplicate point.

2011-01-09	pwessel
	* triangulate.c:	Did not use projected coordinates when -R -J was given.
	
2011-01-07	pwessel
	* ps2raster.c:		Must pass the optional -C args when calculating BB.
				Added -dSAFER as well, + fix -F option [F. Wobbe].
	* gmtswitch:		Requires bash.

2011-01-04	pwessel
	* gmt_support.c:	GMT_cspline should initialize c[0] = c[n-1] = 0.0 in case
				it is called repeatedly [not the case in GMT].

2011-01-03	pwessel
	* autoconf.ac:		Moving to use GSHHS 2.1.1 for next release.
	* gmt_shore.c:		---"---

2010-12-31	pwessel
	* x2sys_init.c:		Crashed if -D was not given [should imply -DTAG].

2010-12-29	pwessel